[package]
edition = "2021"
name = "dendro-parse"
version = "0.1.0"

[dependencies]
# Local crates
dendro-ast = {path = "../ast"}
dendro-error = {path = "../error"}
dendro-lexer = {path = "../lexer"}
dendro-span = {path = "../span"}
# External crates
lalrpop-util = "0.20"
pest = "2.7"

[build-dependencies]
lalrpop = "0.20"
